--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ linkedin_username: derek-howard-03064765
 github_username:  djhoward12
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
