--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   discusses how I was able to apply what I learned in my daily duties to 
   make tasks easier for myself and my coworkers
 baseurl: "automation-blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://djhoward12.github.io/automation-blog" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: derek-howard-03064765
 github_username:  djhoward12
 
