--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: djhoward12@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This blog documents my journey learning automation in general and 
   discusses how I was able to apply what I learned in my daily duties to 
-  make tasks easier for myself and my coworkers
+  make tasks easier for myself and my coworkers.
 baseurl: "automation-blog" # the subpath of your site, e.g. /blog
 url: "https://djhoward12.github.io/automation-blog" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: derek-howard-03064765
